[package]
name = "axum"
version = "0.1.0"
edition = "2018"


[lib]
name = "axum"
path = "src/lib.rs"

[dependencies]
tower = { version = "0.4", features = ["util"] }
http = "0.2"
futures-util = "0.3"
hyper = "0.14"
bytes = "1.0"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.6.1", features = ["macros", "rt-multi-thread"] }